# hr-analytics-segmentation

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: analytics_roadmap.md  gdpr_register.md
powerbi/: semantic_model.md
powerbi/measures/: kpi_measures.dax
src/: generate_demo_data.py  main.py
src/analysis/: segment_profiles.py
src/ingestion/: gdpr_anonymizer.py  loader.py  schema_definitions.py
src/transformation/: segmentation.py
src/validation/: data_quality.py
tests/: test_data_quality.py  test_gdpr_anonymizer.py  test_loader.py  test_segment_profiles.py  test_segmentation.py
