[project]
name = "hr-analytics-segmentation"
version = "1.0.0"
description = "End-to-end werkgeverssegmentatie pipeline met Power BI integratie"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["src/generate_demo_data.py", "src/main.py"]

[tool.coverage.report]
fail_under = 75
show_missing = true
